Problems 1 and 2 done.

--- a/01_mountain_car_policy.ipynb
+++ b/01_mountain_car_policy.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explicit Mountain Car Policy\n",
+    "\n",
+    "Implement an explicit policy for the mountain car environment without using any learning algorithm. Explain in detail your reasoning behind your policy and run several test episodes to measure its performance.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -33,95 +42,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# run one episode \n",
-    "def run_episode(weight_vector):\n",
-    "    state = env.reset()\n",
-    "    total_reward = 0\n",
-    "    for _ in np.arange(200):\n",
-    "        # state is a 2 dimensional vector\n",
-    "        # weight vector is also a 2 dimensional vector\n",
-    "        # the action is 0 if the inner product of weight vector and state is negative \n",
-    "        #               2                                                    non-negative\n",
-    "        if state[1] < 0:\n",
-    "            action = 0\n",
-    "        elif state[1] > 0:\n",
-    "                action = 2\n",
-    "        elif state[0] > -0.5:\n",
-    "            action = 0\n",
-    "        else:\n",
-    "            action = 2\n",
-    "        \n",
-    "        state, reward, done, _ = env.step(action)\n",
-    "        total_reward += reward\n",
-    "        if done:\n",
-    "            break\n",
-    "    return total_reward"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# returns the number of guesses performed till success and the successful weight vector\n",
-    "def guess_till_success():\n",
-    "    counter = 0\n",
-    "    weight_vector = None\n",
-    "    total_reward = -200\n",
-    "    while total_reward == -200:\n",
-    "        counter += 1\n",
-    "        weight_vector = np.random.rand(2) * 2.0 - 1.0\n",
-    "        total_reward = run_episode(weight_vector)\n",
-    "    return counter, weight_vector"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of guesses: 1\n",
-      "Weight vector: [-0.93269053 -0.60875281]\n"
-     ]
-    }
-   ],
-   "source": [
-    "counter, weight_vector = guess_till_success()\n",
-    "print(\"Number of guesses:\", counter)\n",
-    "print(\"Weight vector:\", weight_vector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total reward: -117.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "total_reward = 0\n",
-    "done = False\n",
-    "state = env.reset()\n",
-    "env.render()\n",
-    "time.sleep(0.1)\n",
+    "# Policy Declaration\n",
     "\n",
-    "for _ in np.arange(200):\n",
+    "The logic behind this policy is to always push in the same direction as the velocity, and to work with gravity when the velocity is 0. This poicy efficiently uses the existing momentum of the car to increase the amplitude of the motion over time. The input for policy() is the state of the enviroment.\n",
+    "\n",
+    "state[0] = car position<br>\n",
+    "state[1] = car velocity\n",
+    "\n",
+    "action = 0 -> push left<br>\n",
+    "action = 1 -> no push<br>\n",
+    "action = 2 -> push right\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def policy(state):\n",
     "    if state[1] < 0:\n",
     "        action = 0\n",
     "    elif state[1] > 0:\n",
@@ -130,15 +73,88 @@
     "        action = 0\n",
     "    else:\n",
     "        action = 2\n",
-    "\n",
-    "    state, reward, done, _ = env.step(action)\n",
-    "    total_reward += reward\n",
-    "    env.render()\n",
-    "    time.sleep(0.01)\n",
-    "    if done: break\n",
     "    \n",
-    "env.close()\n",
-    "print(\"Total reward:\", total_reward)"
+    "    return action\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Driver\n",
+    "\n",
+    "The run_episode() method takes as inputs the environment and a boolean. The boolean determines if the episode will be rendered. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_episode(env, render):\n",
+    "    total_reward = 200\n",
+    "    done = False\n",
+    "    state = env.reset()\n",
+    "    if render:\n",
+    "        env.render()\n",
+    "        time.sleep(0.01)\n",
+    "\n",
+    "    for _ in np.arange(200):\n",
+    "        action = policy(state)\n",
+    "        state, reward, done, _ = env.step(action)\n",
+    "        total_reward += reward\n",
+    "        if render:\n",
+    "            env.render()\n",
+    "            time.sleep(0.01)\n",
+    "        if done: break\n",
+    "    \n",
+    "    if render:\n",
+    "        env.close()\n",
+    "        print(\"Episode Reward:\", total_reward)\n",
+    "    return total_reward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing\n",
+    "\n",
+    "The policy is tested by running run_episode a set number of times and recording the total reward for each episode. The mean reward and its standard deviation are then calculated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reward has a max of 200 and is decreased by 1 for each step taken.\n",
+      "\n",
+      "Average reward      : 89.91 +/- 20.10\n",
+      "Average steps taken : 110.09\n"
+     ]
+    }
+   ],
+   "source": [
+    "render = False\n",
+    "n = 10000\n",
+    "\n",
+    "scores = np.array([])\n",
+    "\n",
+    "print(\"Reward has a max of 200 and is decreased by 1 for each step taken.\")\n",
+    "for _ in np.arange(n):\n",
+    "    scores = np.append(scores, [run_episode(env, render)])\n",
+    "\n",
+    "average_score = np.mean(scores)\n",
+    "stdev = np.std(scores)\n",
+    "\n",
+    "print (\"\\nAverage reward      :\", '{:.2f}'.format(average_score), \"+/-\", '{:.2f}'.format(stdev))\n",
+    "print (\"Average steps taken :\", '{:.2f}'.format(200 - average_score))\n"
    ]
   },
   {
