--- a/04_algorithms_methods_overview.ipynb
+++ b/04_algorithms_methods_overview.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Minimax\n",
     "\n",
-    "Minimax"
+    "Minimax is an adversarial search that seeks to maximize the agent's rewards while minimizing the reward for the adversary. This is done in an alternating fashion as the search tree is traversed. Because the state space is exponential, an exhaustive search is prohibitive. Instead a maximum depth is used to facilitate efficient decision making."
    ]
   },
   {
@@ -60,7 +60,7 @@
    "source": [
     "# Alpha-Beta Pruning\n",
     "\n",
-    "Alpha-beta pruning"
+    "Alpha-beta pruning is used to further increase the efficiency of minimax searches by removing superfluous computations. If a Max node recieves some value N from one of its children (a Min node), the Min node's siblings can stop evaluating as soon as they find a value lower than N as the Max node will always choose N over those other valuse. The Similar logic, though reversed, applies to Max nodes feeding values to Min Nodes."
    ]
   },
   {
@@ -69,7 +69,7 @@
    "source": [
     "# Expectimax\n",
     "\n",
-    "Expectimax"
+    "While Minimax assumes ideal behavior on the part of the adversary, this is often not accurate. Expectimax addresses this by looking for the expected value based of the adversary's actions. This method requires some knowledge of the probability distribution of the adversaries possible actions."
    ]
   },
   {
@@ -78,16 +78,16 @@
    "source": [
     "# Markov Decision Processes\n",
     "\n",
-    "Markov decision processes"
+    "Markov decision processes are non-deterministic search problems that seek to define a policy based on a set of states, a set of actions, a transition function, and a reward function. The policy yields a decision based only on the current state. The policy is developed based on the sum of discounted rewards."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q-Value Iteration\n",
+    "# Value Iteration\n",
     "\n",
-    "Value iteration"
+    "Value iteration optimizes the expected value of each state. These values are used to determine actions by taking the max value over all actions. The policy is not explicitly found, only implicitly."
    ]
   },
   {
@@ -96,27 +96,16 @@
    "source": [
     "# Policy Iteration\n",
     "\n",
-    "Policy iteration\n",
-    "\n",
-    "lecture 9 - slide 39"
+    "Policy iteration assumes a given policy and evaluates one step using one-step look-ahead. The resulting values are used to update the policy an another step is taken. This is repeated untill convergance occurs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Online Reinforcement Learning\n",
+    "# Reinforcement Learning\n",
     "\n",
-    "Online reinforcement learning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Temporal Difference Value Learning\n",
-    "\n",
-    "Temporal difference value learning"
+    "Reinforcement learning uses MDPs but the transition and the reward functions are not known. They must be inferred from trial an error. Offline reinforcement learning yields an explicit policy upon completion, while online reinforcement learning continues to learn as the policy is implemented."
    ]
   },
   {
@@ -125,9 +114,7 @@
    "source": [
     "# Q-Learning\n",
     "\n",
-    "Q-learning\n",
-    "\n",
-    "L 10 - Slide 35"
+    "Q-learning updates the Q-value of each state-action pair by computing a running average of Q-value estimates. Each new sample generates a new estimate to be inculded in the running average. Q-learning is capable of off-policy learning. This occurs when acting suboptimally, wich leads to higher exploration. In order to converge to the optimal policy, the learning rate must be gradually decreased."
    ]
   },
   {
@@ -136,9 +123,7 @@
    "source": [
     "# Approximate Q-Learning\n",
     "\n",
-    "Q-learning\n",
-    "\n",
-    "L 10 - Slide 35"
+    "Q-learning relies on having an exaustive list of all possible states. As this is often not feasible, learning from a random sampling of states is often done instead. Decisions for unfamiliar states are extrapolated from what is known about similar states."
    ]
   },
   {
@@ -147,10 +132,15 @@
    "source": [
     "# Policy Search\n",
     "\n",
-    "Q-learning\n",
-    "\n",
-    "L 10 - Slide 35"
+    "Policy searches often use a linear model to relate various state features. The weights of the linear model effectively make up the policy. These weights can be iteratively changed while checking the performance of the policy for convergance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
